--- a/page2.html
+++ b/page2.html
@@ -64,12 +64,13 @@
 
 <section data-bs-version="5.1" class="team2 cid-sOGwhvmw2b" xmlns="http://www.w3.org/1999/html" id="team2-1e">
     
-    
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(35, 35, 35);">
+    </div>
     <div class="container">
         <div class="card">
             <div class="card-wrapper">
                 <div class="row align-items-center">
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-5">
                         <div class="image-wrapper">
                             <img src="assets/images/hh-mesa-de-trabajo-1-575x575.jpg" alt="Mobirise">
                         </div>
@@ -90,7 +91,7 @@
         <div class="card">
             <div class="card-wrapper">
                 <div class="row align-items-center">
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-5">
                         <div class="image-wrapper">
                             <img src="assets/images/hh-mesa-de-trabajo-1-copia-575x575.jpg" alt="Mobirise">
                         </div>
@@ -123,7 +124,7 @@
         </div>
         <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Cuaspud" allowfullscreen=""></iframe></div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/d" style="color:#aaa;">This page</a> was started with Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/b" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to build a free website - <a href="https://mobirise.site/x" style="color:#aaa;">More here</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
